# laba500

./: CMakeLists.txt  README.md  travis.yml
.github/workflows/: cmake-single-platform.yml
banking/: CMakeLists.txt
tests/: CMakeLists.txt  test_account.cpp  test_transaction.cpp
